# cinetag-distributed-video-intelligence

./: .env.example  .env.gcp.example  .gcloudignore  .gitignore  Makefile  README.md  cloudbuild.api.yaml  cloudbuild.frontend.yaml  cloudbuild.yaml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  pyproject.toml.broken.20260506-102557  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260509_01_pgvector_embeddings.py  20260511_02_list_indexes.py
backend/app/: bootstrap.py  main.py
backend/app/api/: pagination.py  routes_health.py  routes_jobs.py  routes_metrics.py  routes_review.py  routes_search.py  routes_tags.py  routes_upload.py  routes_videos.py
backend/app/core/: auth.py  config.py  secrets.py
backend/app/db/: models.py  session.py
backend/app/ml/: mock_embedding_client.py  mock_llm_client.py  providers.py  tag_schema.py
backend/app/observability/: metrics.py
backend/app/queue/: __init__.py  celery_publisher.py  events.py  publisher.py  pubsub_publisher.py
backend/app/scripts/: backfill_embedding_vectors.py  seed_demo.py  sync_schema.py
backend/app/storage/: __init__.py  gcs_store.py  gcs_store.py.backup.20260506-103712  gcs_store.py.backup.20260506-104525  local_store.py
backend/app/tests/: conftest.py  test_auth.py  test_config_queue_urls.py  test_cors.py  test_database_config.py  test_gcp_config.py  test_gcs_store.py  test_health.py  test_llm.py  test_pipeline_tasks.py  test_routes_jobs.py  (+10 more)
backend/cinetag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: run_migrations.py
(+204 files in other folders)
